--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^35.0.0",
+    "expo": "^35.0.1",
+    "js-base64": "^2.5.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.4.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-router-flux": "^4.0.6",
