--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "expo": "^35.0.1",
     "js-base64": "^2.5.1",
     "react": "16.8.3",
@@ -19,7 +20,10 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-axios-middleware": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
