--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.1",
     "expo": "^35.0.1",
     "js-base64": "^2.5.1",
@@ -15,15 +16,20 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.4.1",
-    "react-native-reanimated": "~1.3.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.2.0",
     "react-native-router-flux": "^4.0.6",
-    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-safe-area-context": "^0.3.6",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-text-input-layout": "0.0.5",
     "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7",
+    "react-navigation": "^4.1.0",
+    "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-axios-middleware": "^4.0.1"
+    "redux-axios-middleware": "^4.0.1",
+    "rn-textinputlayout": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
