--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "sasi",
   "displayName": "Display1",
   "expo": {
-    "name": "sasi",
+    "name": "PARKLY",
     "slug": "expo-template-bare",
     "privacy": "unlisted",
     "sdkVersion": "35.0.0",
@@ -12,6 +12,8 @@
       "ios",
       "android",
       "web"
-    ]
+    ],
+    "description": "PARKLY react native project",
+    "githubUrl": "https://github.com/DenisGUCJ/Parkly-React-Native-.git"
   }
 }
